# CooperEditor

./: .gitignore  CMakeLists.txt  PHASE1_VULKAN_DEVICE_SETUP.md  PHASE2_VULKAN_PRESENTATION_AND_SWAPCHAIN.md  README.md  README_PROJECT.md  imgui.ini  main.cpp
config/: app.ini
docs/: ARCHITECTURE.md  MAC_VULKAN_SETUP.md  README.md  VULKAN_INSTANCE_WALKTHROUGH.md
include/: renderer.h  shader.h  window.h
include/engine/: Application.hpp
include/engine/camera/: CameraController.hpp  OrthographicCamera.hpp  PerspectiveCamera.hpp
include/engine/config/: AppConfig.hpp  AppConfigValidation.hpp
include/engine/editor/: EditorLayer.hpp  EditorTypes.hpp  EditorUi.hpp
include/engine/editor/panels/: ConsolePanel.hpp  HierarchyPanel.hpp  InspectorPanel.hpp
include/engine/input/: InputState.hpp
include/engine/math/: MathTypes.hpp
include/engine/render/: Geometry.hpp  Material.hpp  Mesh.hpp  Scene.hpp  Transform.hpp
include/engine/ui/: DockLayout.hpp
include/engine/vulkan/: VulkanContext.hpp  VulkanReporter.hpp  VulkanTypes.hpp
include/engine/window/: Window.hpp
shaders/: triangle.frag  triangle.vert
src/: main.cpp
src/engine/: Application.cpp
src/engine/camera/: CameraController.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp
src/engine/config/: AppConfig.cpp  AppConfigValidation.cpp
src/engine/editor/: EditorLayer.cpp  EditorUi.cpp
src/engine/editor/panels/: ConsolePanel.cpp  HierarchyPanel.cpp  InspectorPanel.cpp
src/engine/render/: Scene.cpp  Transform.cpp
src/engine/ui/: DockLayout.cpp
src/engine/vulkan/: VulkanBootstrap.cpp  VulkanBuffer.cpp  VulkanContext.cpp  VulkanContextInternal.hpp  VulkanDevice.cpp  VulkanPipeline.cpp  VulkanRender.cpp  VulkanReporter.cpp  VulkanShader.cpp  VulkanSwapchain.cpp
src/engine/window/: Window.cpp
